--- a/vue/package.json
+++ b/vue/package.json
@@ -11,12 +11,16 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.3.0",
     "element-ui": "^2.8.2",
+    "material-design-icons-iconfont": "^5.0.1",
     "nouislider": "^11.1.0",
+    "vee-validate": "^2.2.7",
     "vue": "^2.6.6",
     "vue-lazy-load": "^0.0.7",
     "vue-lazyload": "^1.2.6",
+    "vue-material-design-icons": "^3.2.0",
     "vue-router": "^3.0.2",
-    "vue2-transitions": "^0.2.3"
+    "vue2-transitions": "^0.2.3",
+    "vuetify": "^1.5.14"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.4.0",
