--- a/vue/package.json
+++ b/vue/package.json
@@ -15,6 +15,7 @@
     "nouislider": "^11.1.0",
     "vee-validate": "^2.2.7",
     "vue": "^2.6.6",
+    "vue-autosuggest": "^1.8.3",
     "vue-google-autocomplete": "^1.1.0",
     "vue-lazy-load": "^0.0.7",
     "vue-lazyload": "^1.2.6",
